[package]
name = "seahorse_calculator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "seahorse_calculator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
pyth-sdk-solana = { version = "0.7.0", optional = true }
toml_datetime = "=0.6.3"
toml_edit = "=0.19.13"
winnow = "=0.5.0"
hashbrown ="=0.14.0"